--- a/css/my_style.css
+++ b/css/my_style.css
@@ -40,3 +40,17 @@
 	
 }
 
+.my_menu_color{
+	
+	background-color:#212226 !important;
+}
+
+.bottom_split{
+	width:100%;
+	height:15px;
+	bottom: 0;
+	position: absolute;
+	opacity: 0.65;
+	
+	
+}
